[tool.poetry]
name = "finalproject"
version = "0.1.0"
description = ""
authors = ["Asger <jungar111>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^1.2.0"
numpy = "^1.23.5"
matplotlib = "^3.6.2"
thefuzz = "^0.19.0"
statsmodels = "^0.13.5"
requests = "^2.28.1"
networkx = "^2.8.8"
fa2 = "^0.3.5"
wordcloud = "^1.8.2.2"
nltk = "^3.7"
pycountry = "^22.3.5"
bs4 = "^0.0.1"
basemap = "^1.3.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.19.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
